--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -129,6 +129,8 @@ parts:
       sed -i "198s/'google-chrome'/'xdg-open', 'google-chrome'/g" ${SNAPCRAFT_STAGE}/opt/metasploit-framework/embedded/lib/ruby/gems/3.*/gems/rex-core-*/lib/rex/compat.rb
       sed -i "s#/opt/metasploit-framework/embedded/bin/ruby#/usr/bin/env ruby#g" ${SNAPCRAFT_STAGE}/opt/metasploit-framework/embedded/bin/*
       sed -i 's#include "/usr/share#include "/snap/metasploit-framework/current/usr/share#g' ${SNAPCRAFT_STAGE}/etc/nanorc
+      sed -i '/DEVELOPER_TIPS = \[/,+5d' ${SNAPCRAFT_STAGE}/opt/metasploit-framework/embedded/framework/lib/msf/ui/tip.rb
+      sed -i 's/ALL_TIPS = COMMON_TIPS + DEVELOPER_TIPS/ALL_TIPS = COMMON_TIPS/g' ${SNAPCRAFT_STAGE}/opt/metasploit-framework/embedded/framework/lib/msf/ui/tip.rb
       echo -e '#!/bin/sh\n\nset -e\n\necho "msfupdate is no longer supported when Metasploit is installed as a snap package.\nPlease use:- snap refresh metasploit-framework"' > ${SNAPCRAFT_STAGE}/opt/metasploit-framework/bin/msfupdate
       #snapcraftctl set-version $(cat $SNAPCRAFT_STAGE/opt/metasploit-framework/embedded/framework/version.yml | grep -E 'major|minor|patch' | awk '{printf $2"."}' | cut -d+ -f1)
       snapcraftctl set-version $(cd ../parts/metasploit-framework/stage_packages/ && ls metasploit* | awk -F_ '{ printf $2 }')
