--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,7 +13,7 @@ description: |
 
 grade: stable
 confinement: strict
-compression: lzo
+#compression: lzo
 
 ########################################################################
 ## This is experimental code and will be changed a lot before release ##
